package IM.Login;
import "IM.BaseDefine.proto";

message IMLoginReq{
	required string user_name = 1;
	required string password = 2;
	required IM.BaseDefine.UserStatusType online_status = 3;
	required IM.BaseDefine.ClientType client_type = 4;
	optional string client_version = 5;	
}

message IMLoginRes{
	required uint32 server_time = 1;
	required IM.BaseDefine.ResultType result_code = 2;
	optional string result_string = 3;
	optional IM.BaseDefine.UserStatusType online_status = 4;
	optional IM.BaseDefine.UserInfo user_info = 5;
}

message IMLogoutReq{
	
}

message IMLogoutRsp{
	required uint32 result_code = 1;
}
